# pytubeBot

./: LICENSE  pyproject.toml
pytube_bot/: config.py  main.py
